# Algorithms

./: .gitignore  CMakeLists.txt  Intro.md  README.md  merge_binary_insertion_sort.h
KruskalOnGraph/: Kruskal.java  RunKruskal.java
KruskalOnGraph/datastructure/: Compare.java  Edge.java  Graph.java  GraphTest.java  Node.java
UnionFindSet/: UnionFindSet.java  UnionFindSetNode.java  UnionFindSetTest.java
build_file/exercise2/: CMakeLists.txt
edit_distance/: edit_distance_dyn_test.c  edit_distance_strings.h  edit_distance_test.c
esercizio1/: CMakeLists.txt  merge_binary_insertion_sort.c  merge_binary_insertion_sort.h  merge_binary_insertion_sort_main.c  report_ex1.md  test_merge_binaryinsertion_sort.c
esercizio1/staticResources/: CMakeLists.txt
esercizio2/: CMakeLists.txt  edit_distance_dyn_test.c  edit_distance_strings.c  edit_distance_strings.h  edit_distance_strings_dynamic.c  edit_distance_strings_dynamic.h  edit_distance_strings_main.c  edit_distance_test.c  reportEx2.md
exercise3/: UnionFindSet.java  UnionFindSetNode.java  UnionFindSetTest.java
exercise4/: DataRecord.java  Edge.java  Graph.java  GraphTest.java  Kruskal.java  Node.java  Report.md  RunKruskal.java  StartKruskal.java
exercise4/Datastructure/: Compare.java  Edge.java  Graph.java  GraphTest.java  Node.java
exercise4/datastructure/: Compare.java  Edge.java  Graph.java  GraphTest.java  Node.java
exercise4/utils/: DataRecord.java  DataUtils.java
merge_binary_insertion_sort/: merge_binary_insertion_sort.h  merge_binary_insertion_sort_main.c  report_ex1.md
